Adicionando estilo na página

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Portifólio Pessoal</title>
+        <link  rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Meu primeiro portifólio usando o Git</h1>
